Updated style and text

--- a/themes/emil/incl/footer.twig
+++ b/themes/emil/incl/footer.twig
@@ -1,7 +1,7 @@
 <div class="footer">
     <div>
         <p>
-            En footer med lite text.
+            Den här foten saknar en fin sko men det kommer mera.
         </p>
     </div>
     <div class="social">
