--- a/themes/emil/css/style.css
+++ b/themes/emil/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: pink;
+    background-color: lightblue;
 }
 
 * {
@@ -30,8 +30,20 @@ body {
 
 .main {
     flex: 1 0 auto;
+    background-color: lightgoldenrodyellow;
 }
 
+.main h1 {
+    margin-top: 100px;
+    margin-left: 300px;
+}
+.main p {
+    margin-left: 300px;
+}
+
+.header {
+    border-bottom: 1px solid #222;
+}
 .header, .footer {
     flex: 0 0 auto;
 }
@@ -47,6 +59,8 @@ body {
 
 .title, .logo {
     padding: 3em 3em 3em 0;
+    height: 30%;
+    width: 30%;
 }
 
 @media (max-width: 767px) {
@@ -75,6 +89,12 @@ body {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid #222;
+    height: 100px;
+}
+
+.footer p {
+    margin-left: 300px;
+    margin-top: 10px;
 }
 
 .footer a {
@@ -83,6 +103,8 @@ body {
 
 .footer .social {
     font-size: 2rem;
+    margin-top: 50px;
+    margin-right: 20px;
 }
 
 /* Typografy */
