--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -12,7 +12,7 @@
             <span class="sr-only">{{ social.title }}</span>
         </a>
         <a href="{{ social.url }}" title="{{ social.title }}" role="button">
-            <i class="{{ social.google }}" aria-hidden="true"></i>
+            <i class="{{ social.markdown }}" aria-hidden="true"></i>
             <span class="sr-only">{{ social.title }}</span>
         </a>
         <a href="{{ social.url }}" title="{{ social.title }}" role="button">
