--- a/themes/kmom02/scss/footer.scss
+++ b/themes/kmom02/scss/footer.scss
@@ -1,3 +1,5 @@
+
+/* Nested .footer */
 .footer {
     background-color: $footer-background-color;
     display: flex;
@@ -5,23 +7,24 @@
     border-top: 1px solid $border-color;
     height: 100px;
     flex: 0 0 auto;
+
+    p {
+        margin-left: 300px;
+        margin-top: 10px;
+    }
+
+    a {
+        color: $icon-color;
+        text-decoration: none;
+    }
+
+    .social {
+        font-size: 2rem;
+        margin-top: 50px;
+        margin-right: 20px;
+    }
 }
 
-.footer p {
-    margin-left: 300px;
-    margin-top: 10px;
-}
-
-.footer a {
-    color: $icon-color;
-    text-decoration: none;
-}
-
-.footer .social {
-    font-size: 2rem;
-    margin-top: 50px;
-    margin-right: 20px;
-}
 
 @media (max-width: 1000px) {
     .footer p {
