--- a/themes/kmom02/scss/main.scss
+++ b/themes/kmom02/scss/main.scss
@@ -3,9 +3,11 @@
     border: 0 none;
     margin: 0;
     padding: 0;
+
 }
 
-html, body {
+html,
+body {
     height: 100%;
 }
 
@@ -14,18 +16,29 @@ body {
     flex-direction: column;
 }
 
+/* Nested .main */
 .main {
     flex: 1 0 auto;
     background-color: $main-background-color;
+
+    h1 {
+        margin-top: 100px;
+        margin-left: 300px;
+    }
+
+    p {
+        margin-left: 300px;
+        margin-right: 50px;
+    }
 }
 
-.main h1 {
-    margin-top: 100px;
-    margin-left: 300px;
+ol,
+ul {
+    padding-left: 1.5em;
 }
-.main p {
-    margin-left: 300px;
-    margin-right: 50px;
+
+.hidden {
+    display: none !important;
 }
 
 @media (max-width: 1000px) {
@@ -33,6 +46,7 @@ body {
         margin-top: 100px;
         margin-left: 200px;
     }
+
     .main p {
         margin-left: 200px;
         margin-right: 100px;
@@ -44,6 +58,7 @@ body {
         margin-top: 100px;
         margin-left: 100px;
     }
+
     .main p {
         margin-left: 100px;
         margin-right: 50px;
