--- a/themes/kmom02/scss/mobile-menu.scss
+++ b/themes/kmom02/scss/mobile-menu.scss
@@ -3,19 +3,23 @@
     transition: height 0.5s ease-in !important;
 }
 
-.nav ul {
-    display: flex;
-    justify-content: flex-end;
-    padding: 1em 0;
-    list-style: none;
+/* Nested .nav */
+.nav {
+    ul {
+        display: flex;
+        justify-content: flex-end;
+        padding: 1em 0;
+        list-style: none;
+    }
+
+    ul li {
+        padding: 0 1em;
+    }
 }
 
-.nav ul li {
-    padding: 0 1em;
-}
-
-.nav a, .nav-toggle {
-    color: #333;
+.nav a,
+.nav-toggle {
+    color: $mobile-menu-toggle-color;
 }
 
 .nav-toggle {
@@ -27,20 +31,23 @@
         flex-direction: column;
     }
 
-    .nav ul {
-        flex-direction: column;
-        padding-bottom: 1em;
-    }
+    /* Nested .nav */
+    .nav {
+        ul {
+            flex-direction: column;
+            padding-bottom: 1em;
+        }
 
-    .nav ul li {
-        display: flex;
-        flex-direction: column;
-        text-align: center;
-    }
+        ul li {
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+        }
 
-    .nav ul li a {
-        display: block;
-        padding: 0.5em 0;
+        ul li a {
+            display: block;
+            padding: 0.5em 0;
+        }
     }
 
     .js .nav-toggle {
