--- a/themes/kmom02/scss/title.scss
+++ b/themes/kmom02/scss/title.scss
@@ -1,6 +1,16 @@
+
+/* Nested .title */
 .title {
     padding: 1em 1em 1em 0;
     width: 40%;
+
+    * {
+        color: $title-color;
+    }
+
+    p {
+        font-style: italic;
+    }
 }
 
 .logo {
@@ -8,21 +18,16 @@
     width: 30%;
 }
 
-.title * {
-    color: $title-color;
-}
-
-.title p {
-    font-style: italic;
-}
-
 @media (max-width: 767px) {
-    .title, .logo {
+    .title,
+    .logo {
         padding: 1em 1em 1em 0;
     }
+
     .title {
         min-width: 50%;
     }
+
     .logo {
         max-width: 30%;
     }
