--- a/themes/kmom02/scss/typografi.scss
+++ b/themes/kmom02/scss/typografi.scss
@@ -4,13 +4,22 @@ body {
     color: $font-color;
 }
 
-p, td, th, li, dd {
+p,
+td,
+th,
+li,
+dd {
     text-align: justify;
     overflow-wrap: break-word;
     word-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: 0.6em;
     font-weight: bold;
     font-family: 'Sarabun', sans-serif;
