--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -2,6 +2,10 @@ $font-color: #444;
 $title-color: #111;
 $border-color: #222;
 $icon-color: #222;
+$blockquote-border-color: #f5f5f5;
+$code-border-color: #ccc;
+$code-background-color: #f5f5f5;
+$mobile-menu-toggle-color: #333;
 $font-alternative-color: #fff;
 $accent-color: #ee6c4d;
 $header-background-color: #add8e6;
