--- a/themes/kmom02/css/style.css
+++ b/themes/kmom02/css/style.css
@@ -6470,7 +6470,8 @@ template {
 }
 
 @media (max-width: 767px) {
-  .title, .logo {
+  .title,
+.logo {
     padding: 1em 1em 1em 0;
   }
 
@@ -6482,7 +6483,8 @@ template {
     max-width: 30%;
   }
 }
-.header, .site-header {
+.header,
+.site-header {
   display: flex;
   justify-content: space-between;
 }
@@ -6500,30 +6502,36 @@ template {
   padding: 0;
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
 body {
   display: flex;
   flex-direction: column;
+  background-color: #fafad2;
 }
 
 /* Nested .main */
 .main {
   flex: 1 0 auto;
-  background-color: #fafad2;
 }
 .main h1 {
   margin-top: 100px;
   margin-left: 300px;
+}
+.main h2 {
+  margin-top: 100px;
+  margin-left: 30%;
 }
 .main p {
   margin-left: 300px;
   margin-right: 50px;
 }
 
-ol, ul {
+ol,
+ul {
   padding-left: 1.5em;
 }
 
@@ -6553,6 +6561,103 @@ ol, ul {
     margin-right: 50px;
   }
 }
+.technology-container {
+  display: grid;
+  gap: 1em 1em;
+  max-width: 60%;
+  margin-left: 15%;
+  margin-bottom: 50px;
+  flex: 1 0 auto;
+}
+
+.technology-container h1,
+p {
+  grid-column: span 3;
+  justify-self: center;
+}
+
+.technology-items {
+  background: #e6c9ac;
+  padding: 1.5rem;
+  border-radius: 1rem;
+  height: 10em;
+  color: #444;
+  min-width: 200px;
+  border-bottom: 10px inset #638c99;
+}
+
+.technology-article {
+  display: flex;
+  justify-content: center;
+  margin: 50px 0;
+  flex: 1 0 auto;
+}
+
+.sidenav ul {
+  list-style-type: none;
+  padding-left: 4em;
+}
+
+.sidenav a {
+  text-decoration: none;
+}
+
+.articles {
+  max-width: 40%;
+  padding-left: 50px;
+}
+
+@media (min-width: 2000px) {
+  .articles {
+    max-width: 25%;
+    padding-left: 50px;
+  }
+}
+@media (max-width: 767px) {
+  .technology-article {
+    margin-left: 20%;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+
+  .articles {
+    max-width: 90%;
+    padding-left: 0;
+  }
+
+  .sidenav {
+    display: none;
+  }
+
+  .technology-container {
+    display: block;
+    max-width: 100%;
+    margin-left: 25%;
+    margin-right: 25%;
+    margin-bottom: 50px;
+  }
+
+  .technology-container h1 {
+    text-align: center;
+  }
+
+  .technology-container p {
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
+  .technology-items {
+    background: #e6c9ac;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    height: 10em;
+    color: #444;
+    min-width: 200px;
+    max-width: 400px;
+    margin-bottom: 25px;
+  }
+}
 .slide {
   overflow-y: hidden !important;
   transition: height 0.5s ease-in !important;
@@ -6569,7 +6674,8 @@ ol, ul {
   padding: 0 1em;
 }
 
-.nav a, .nav-toggle {
+.nav a,
+.nav-toggle {
   color: #333;
 }
 
@@ -6649,13 +6755,21 @@ body {
   color: #444;
 }
 
-p, td, th, li, dd {
-  text-align: justify;
+p,
+td,
+th,
+li,
+dd {
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-bottom: 0.6em;
   font-weight: bold;
   font-family: "Sarabun", sans-serif;
@@ -6669,9 +6783,10 @@ img {
 .footer {
   background-color: #add8e6;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   border-top: 1px solid #222;
-  height: 100px;
+  height: auto;
   flex: 0 0 auto;
 }
 .footer p {
@@ -6686,6 +6801,8 @@ img {
   font-size: 2rem;
   margin-top: 50px;
   margin-right: 20px;
+  margin-bottom: 20px;
+  align-self: end;
 }
 
 @media (max-width: 1000px) {
@@ -6700,5 +6817,6 @@ img {
     margin-left: 100px;
     margin-right: 50px;
     margin-top: 10px;
+    text-align: -webkit-match-parent;
   }
 }
