--- a/themes/kmom02/scss/main.scss
+++ b/themes/kmom02/scss/main.scss
@@ -14,16 +14,22 @@ body {
 body {
     display: flex;
     flex-direction: column;
+    background-color: $main-background-color;
+
 }
 
 /* Nested .main */
 .main {
     flex: 1 0 auto;
-    background-color: $main-background-color;
 
     h1 {
         margin-top: 100px;
         margin-left: 300px;
+    }
+
+    h2 {
+        margin-top: 100px;
+        margin-left: 30%;
     }
 
     p {
