--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -9,6 +9,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'title';
 @import 'header';
 @import 'main';
+@import 'technology';
 @import 'mobile-menu';
 @import 'blockquotes';
 @import 'code';
