--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -6,10 +6,14 @@ $blockquote-border-color: #f5f5f5;
 $code-border-color: #ccc;
 $code-background-color: #f5f5f5;
 $mobile-menu-toggle-color: #333;
-$font-alternative-color: #fff;
 $accent-color: #ee6c4d;
 $header-background-color: #add8e6;
 $main-background-color: #fafad2;
 $footer-background-color: #add8e6;
+$tech-boxes-background-color: #e6c9ac;
+$tech-boxes-bottom-border-color: #638c99;
+
+
 
 $background-alternative-color: #e0fbfc;
+$font-alternative-color: #fff;
