--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -10,6 +10,7 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'header';
 @import 'main';
 @import 'technology';
+@import 'analysis';
 @import 'mobile-menu';
 @import 'blockquotes';
 @import 'code';
