--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -3,6 +3,7 @@
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Sarabun&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Yanone+Kaffeesatz:wght@300;400&display=swap");
 .fa,
 .fas,
 .far,
@@ -6458,7 +6459,7 @@ template {
   width: 40%;
 }
 .title * {
-  color: #111;
+  color: #ddd;
 }
 .title p {
   font-style: italic;
@@ -6490,7 +6491,7 @@ template {
 }
 
 .header {
-  background-color: #add8e6;
+  background-color: #4D6880;
   border-bottom: 1px solid #222;
   flex: 0 0 auto;
 }
@@ -6510,7 +6511,7 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  background-color: #fafad2;
+  background-color: #232B32;
 }
 
 /* Nested .main */
@@ -6570,20 +6571,28 @@ ul {
   flex: 1 0 auto;
 }
 
+.technology-container .technology-items:hover {
+  background-color: #4D6880;
+}
+
 .technology-container h1,
 p {
   grid-column: span 3;
   justify-self: center;
 }
 
+.technology-container a {
+  text-decoration: none;
+}
+
 .technology-items {
-  background: #e6c9ac;
+  background: #806740;
   padding: 1.5rem;
   border-radius: 1rem;
   height: 10em;
-  color: #444;
+  color: #ddd;
   min-width: 200px;
-  border-bottom: 10px inset #638c99;
+  border-bottom: 10px inset #4D6880;
 }
 
 .technology-article {
@@ -6648,11 +6657,11 @@ p {
   }
 
   .technology-items {
-    background: #e6c9ac;
+    background: #806740;
     padding: 1.5rem;
     border-radius: 1rem;
     height: 10em;
-    color: #444;
+    color: #ddd;
     min-width: 200px;
     max-width: 400px;
     margin-bottom: 25px;
@@ -6679,6 +6688,14 @@ p {
   padding-left: 50px;
 }
 
+.analysis h2 {
+  margin-bottom: 10px;
+}
+
+.analysis p {
+  margin-bottom: 20px;
+}
+
 @media (min-width: 2000px) {
   .analysis {
     max-width: 25%;
@@ -6696,10 +6713,6 @@ p {
   .analysis {
     max-width: 90%;
     padding-left: 0;
-  }
-
-  .analysis-sidenav {
-    display: none;
   }
 }
 .slide {
@@ -6770,7 +6783,7 @@ code {
   padding: 0.1em 0.2em;
   border: 1px solid #ccc;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: #806740;
   font-family: monospace;
   font-size: 0.85rem;
   line-height: 1.9824;
@@ -6780,7 +6793,7 @@ pre {
   padding: 0 1em;
   border: 1px solid #ccc;
   border-radius: 0.3em;
-  background: #f5f5f5;
+  background: #806740;
 }
 
 pre code {
@@ -6794,9 +6807,19 @@ pre code {
 }
 
 body {
-  font-family: "Josefin Sans", sans-serif;
-  line-height: 1.5rem;
-  color: #444;
+  font-family: "Yanone Kaffeesatz", sans-serif;
+  font-weight: 350;
+  line-height: 1.5em;
+  font-size: 20px;
+  color: #ddd;
+}
+
+body a {
+  color: #4848F0;
+}
+
+.header a:hover {
+  color: #ddd;
 }
 
 p,
@@ -6816,7 +6839,7 @@ h5,
 h6 {
   margin-bottom: 0.6em;
   font-weight: bold;
-  font-family: "Sarabun", sans-serif;
+  font-family: "Comfortaa", cursive;
 }
 
 img {
@@ -6825,7 +6848,7 @@ img {
 
 /* Nested .footer */
 .footer {
-  background-color: #add8e6;
+  background-color: #4D6880;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -6863,4 +6886,7 @@ img {
     margin-top: 10px;
     text-align: -webkit-match-parent;
   }
+}
+html img {
+  filter: brightness(0.8) contrast(1.2);
 }
