Added analyse load, gallery, bigger font-sizes

--- a/themes/kmom02/css/style-dark.css
+++ b/themes/kmom02/css/style-dark.css
@@ -6491,7 +6491,7 @@ template {
 }
 
 .header {
-  background-color: #4D6880;
+  background-color: #4d6880;
   border-bottom: 1px solid #222;
   flex: 0 0 auto;
 }
@@ -6511,7 +6511,7 @@ body {
 body {
   display: flex;
   flex-direction: column;
-  background-color: #232B32;
+  background-color: #232b32;
 }
 
 /* Nested .main */
@@ -6572,7 +6572,7 @@ ul {
 }
 
 .technology-container .technology-items:hover {
-  background-color: #4D6880;
+  background-color: #4d6880;
 }
 
 .technology-container h1,
@@ -6592,7 +6592,7 @@ p {
   height: 10em;
   color: #ddd;
   min-width: 200px;
-  border-bottom: 10px inset #4D6880;
+  border-bottom: 10px inset #4d6880;
 }
 
 .technology-article {
@@ -6667,6 +6667,74 @@ p {
     margin-bottom: 25px;
   }
 }
+.gallery-container {
+  display: grid;
+  gap: 1em 1em;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+  width: fit-content;
+  margin: 0 auto;
+  margin-bottom: 500px;
+}
+
+.gallery-container h1 {
+  grid-column: span 3;
+  justify-self: center;
+  margin: 50px auto;
+}
+
+.gallery-container a {
+  line-height: 0;
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 50%;
+  display: block;
+  margin-left: 25%;
+  margin-right: 25%;
+}
+
+@media (max-width: 1600px) {
+  .gallery-container {
+    width: 90%;
+  }
+
+  .embed-container iframe {
+    width: 80%;
+    height: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+@media (max-width: 767px) {
+  .gallery-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    margin-bottom: 50px;
+  }
+
+  .embed-container iframe {
+    width: 90%;
+    height: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+}
 .analysis-container {
   display: flex;
   justify-content: center;
@@ -6696,10 +6764,20 @@ p {
   margin-bottom: 20px;
 }
 
+.kalkyl {
+  width: 850px;
+  height: 300px;
+}
+
 @media (min-width: 2000px) {
   .analysis {
     max-width: 25%;
     padding-left: 50px;
+  }
+}
+@media (max-width: 1400px) {
+  .kalkyl {
+    width: 100%;
   }
 }
 @media (max-width: 767px) {
@@ -6740,7 +6818,7 @@ p {
   display: none;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1200px) {
   .header {
     flex-direction: column;
   }
@@ -6810,12 +6888,16 @@ body {
   font-family: "Yanone Kaffeesatz", sans-serif;
   font-weight: 350;
   line-height: 1.5em;
-  font-size: 20px;
+  font-size: 22px;
   color: #ddd;
 }
 
 body a {
-  color: #4848F0;
+  color: #4848f0;
+}
+
+body h1 {
+  line-height: 1em;
 }
 
 .header a:hover {
@@ -6848,7 +6930,7 @@ img {
 
 /* Nested .footer */
 .footer {
-  background-color: #4D6880;
+  background-color: #4d6880;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
