--- a/themes/kmom02/scss/variables-dark.scss
+++ b/themes/kmom02/scss/variables-dark.scss
@@ -7,12 +7,12 @@ $code-border-color: #ccc;
 $code-background-color: #806740;
 $mobile-menu-toggle-color: #333;
 $accent-color: #ee6c4d;
-$header-background-color: #4D6880;
-$main-background-color: #232B32;
-$footer-background-color: #4D6880;
+$header-background-color: #4d6880;
+$main-background-color: #232b32;
+$footer-background-color: #4d6880;
 $tech-boxes-background-color: #806740;
-$tech-boxes-bottom-border-color: #4D6880;
-$body-link-color: #4848F0;
+$tech-boxes-bottom-border-color: #4d6880;
+$body-link-color: #4848f0;
 
 $background-alternative-color: #e0fbfc;
 $font-alternative-color: #fff;
