--- a/themes/kmom02/scss/analysis.scss
+++ b/themes/kmom02/scss/analysis.scss
@@ -27,11 +27,22 @@
     margin-bottom: 20px;
 }
 
+.kalkyl {
+    width: 850px;
+    height: 300px;
+}
+
 
 @media (min-width: 2000px) {
     .analysis {
         max-width: 25%;
         padding-left: 50px;
+    }
+}
+
+@media (max-width: 1400px) {
+    .kalkyl {
+        width: 100%;
     }
 }
 
