--- a/themes/kmom02/scss/typografi.scss
+++ b/themes/kmom02/scss/typografi.scss
@@ -1,7 +1,8 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
-    line-height: 1.5rem;
+    line-height: 1.5em;
     color: $font-color;
+    font-size: 20px;
 }
 
 body a {
