--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -7,13 +7,13 @@ $code-border-color: #ccc;
 $code-background-color: #f5f5f5;
 $mobile-menu-toggle-color: #333;
 $accent-color: #ee6c4d;
-$header-background-color: #D9F5FF;
+$header-background-color: #d9f5ff;
 $main-background-color: #ffedd9;
-$footer-background-color: #D9F5FF;
-$tech-boxes-background-color: #B39474;
-$tech-boxes-bottom-border-color: #86A7B3;
-$body-link-color: #4848F0;
-$body-visited-link-color: #9932CC;
+$footer-background-color: #d9f5ff;
+$tech-boxes-background-color: #b39474;
+$tech-boxes-bottom-border-color: #86a7b3;
+$body-link-color: #4848f0;
+$body-visited-link-color: #9932cc;
 
 $background-alternative-color: #e0fbfc;
 $font-alternative-color: #fff;
