--- a/themes/kmom02/incl/footer.twig
+++ b/themes/kmom02/incl/footer.twig
@@ -1,7 +1,7 @@
 <div class="footer">
     <div>
         <p>
-            Den här foten saknar en fin sko men det kommer mera.
+            ©Emil Abrahamsson 2021
         </p>
     </div>
     <div class="social">
