--- a/themes/kmom02/scss/footer.scss
+++ b/themes/kmom02/scss/footer.scss
@@ -20,12 +20,16 @@
     }
 
     .social {
-        font-size: 2rem;
+        font-size: 2em;
         margin-top: 50px;
         margin-right: 20px;
         margin-bottom: 20px;
         align-self: end;
     }
+
+    // i {
+    //     padding: 10px;
+    // }
 }
 
 
