--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -18,3 +18,4 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'typografi';
 @import 'footer';
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Sarabun&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
