--- a/themes/kmom02/scss/code.scss
+++ b/themes/kmom02/scss/code.scss
@@ -14,6 +14,8 @@ pre {
     border: 1px solid $code-border-color;
     border-radius: 0.3em;
     background: $code-background-color;
+    margin-left: 300px;
+    max-width: 750px;
 }
 
 pre code {
