--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -6,8 +6,8 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 
 @import '../../node_modules/normalize.css/normalize';
 @import 'variables-dark';
-@import 'title';
-@import 'header';
+@import 'title-dark';
+@import 'header-dark';
 @import 'main';
 @import 'technology';
 @import 'gallery';
@@ -19,6 +19,8 @@ $fa-font-path: '../../shared/fontawesome/webfonts';
 @import 'footer';
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Sarabun&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&family=Yanone+Kaffeesatz:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:900i&display=swap');
+
 
 
 html img {
